--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,20 @@
     "configurations": [
         {
             "type": "java",
+            "name": "F_DeleteFromNthNode",
+            "request": "launch",
+            "mainClass": "O_Linked_List.F_DeleteFromNthNode",
+            "projectName": "JAVA_dca63a9d"
+        },
+        {
+            "type": "java",
+            "name": "E_ReverseALL",
+            "request": "launch",
+            "mainClass": "O_Linked_List.E_ReverseALL",
+            "projectName": "JAVA_dca63a9d"
+        },
+        {
+            "type": "java",
             "name": "D_RecursiveSearch",
             "request": "launch",
             "mainClass": "O_Linked_List.D_RecursiveSearch",
