--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,34 @@
     "configurations": [
         {
             "type": "java",
+            "name": "J_MergeSortinLL",
+            "request": "launch",
+            "mainClass": "O_Linked_List.J_MergeSortinLL",
+            "projectName": "JAVA_dca63a9d"
+        },
+        {
+            "type": "java",
+            "name": "I_LLusingJCF",
+            "request": "launch",
+            "mainClass": "O_Linked_List.I_LLusingJCF",
+            "projectName": "JAVA_dca63a9d"
+        },
+        {
+            "type": "java",
+            "name": "H_RemoveACycle",
+            "request": "launch",
+            "mainClass": "O_Linked_List.H_RemoveACycle",
+            "projectName": "JAVA_dca63a9d"
+        },
+        {
+            "type": "java",
+            "name": "G_DetectACycle",
+            "request": "launch",
+            "mainClass": "O_Linked_List.G_DetectACycle",
+            "projectName": "JAVA_dca63a9d"
+        },
+        {
+            "type": "java",
             "name": "F_DeleteFromNthNode",
             "request": "launch",
             "mainClass": "O_Linked_List.F_DeleteFromNthNode",
