--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,20 @@
     "configurations": [
         {
             "type": "java",
+            "name": "L_ReverseaDLL",
+            "request": "launch",
+            "mainClass": "O_Linked_List.L_ReverseaDLL",
+            "projectName": "JAVA_dca63a9d"
+        },
+        {
+            "type": "java",
+            "name": "K_DoublyLL",
+            "request": "launch",
+            "mainClass": "O_Linked_List.K_DoublyLL",
+            "projectName": "JAVA_dca63a9d"
+        },
+        {
+            "type": "java",
             "name": "J_MergeSortinLL",
             "request": "launch",
             "mainClass": "O_Linked_List.J_MergeSortinLL",
