--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Hashmap",
+            "request": "launch",
+            "mainClass": "Q_Hashing.Hashmap",
+            "projectName": "JAVA_88c43b3b"
+        },
+        {
+            "type": "java",
             "name": "TypeSpeedTest",
             "request": "launch",
             "mainClass": "PROJECT.TypeSpeedTest",
